--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "react-d3-tree": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
